# learning-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  alembic_migrate.sh  data_migrate.sh  deploy_prod.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
apps/api/: pyproject.toml
apps/api/src/api/: cli.py  main.py  templates_config.py
apps/api/src/api/routers/: auth.py  bibliography.py  chapters.py  chat.py  sources.py  syllabus.py  topics.py
apps/api/src/api/static/: intake.js  style.css  topic-detail.js
apps/api/src/api/templates/: base.html
apps/api/src/api/templates/auth/: login.html  register.html
apps/api/src/api/templates/chapters/: _blocked.html  _citation.html  _failed.html  _generating.html  _inline.html  _margin_comment.html  _status_card.html  detail.html
apps/api/src/api/templates/chat/: _message.html  _pane.html  _quiz.html  _quiz_question.html  _quiz_result.html
apps/api/src/api/templates/sources/: _card.html  _paperstore_suggestions.html  _row.html  _suggestions.html  intake.html  queue.html
apps/api/src/api/templates/syllabus/: _add_item_form.html  _child_item.html  _children_list.html  _delete_confirm.html  _description_error.html  _description_textarea.html  _edit_item_form.html  _item_row.html
apps/api/src/api/templates/topics/: _bibliography.html  _new_form.html  _syllabus_item.html  _syllabus_panel.html  detail.html  list.html
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_access_control.py  test_auth.py  test_chapters_router.py  test_chat_router.py  test_cli_invite.py  test_comments_router.py  test_source_dedup.py  test_sources_router.py  test_syllabus_router.py  test_topics_router.py
apps/api/tests/routers/: test_syllabus_crud.py
apps/api/tests/unit/: test_templates_config.py
chroma_data/e048fe02-3f04-47b9-ba22-4c55e7504749/: index_metadata.pickle
docker/: Dockerfile.api  compose.prod.yml  compose.yml
docs/: overview.md
specs/001-academic-learning-tracker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-academic-learning-tracker/checklists/: requirements.md
specs/002-topic-source-upload/: data-model.md  research.md  spec.md  tasks.md
specs/003-source-extraction-pipeline/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-multi-user-isolation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-syllabus-chapter-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-chat-agents-panel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-lesson-illustrations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+13 files in other folders)
