[project]
name = "learning-tracker-workspace"
version = "0.1.0"
description = "Academic Learning Tracker — uv workspace root"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/documentlm-core", "apps/api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in function defaults is idiomatic

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "alembic.*", "google.*", "pgvector.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["packages/documentlm-core/tests", "apps/api/tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = ["unit: pure-function tests (no DB)", "integration: tests requiring PostgreSQL"]
